@@ -111,7 +111,7 @@ jinja_cache_size = -1
 beaker.session.key = allura
 beaker.session.type = cookie
 beaker.session.httponly = true
-; set this to true if you use HTTPS.  If you use force_ssl.logged_in, this will be set automatically when logged in and not when not.
+; set this to true if you use HTTPS
 beaker.session.secure = false
 ; CHANGE THIS VALUE FOR YOUR SITE
 beaker.session.validate_key = 714bfe3612c42390726f
@@ -313,11 +313,6 @@ webhook.repo_push.max_hooks = {"git": 3, "hg": 3, "svn": 3}
 
 ; To make all pages use ssl:   (also set beaker.session.secure above)
 ;force_ssl.pattern = .
-; To use ssl if and only if a user is logged in:
-;force_ssl.logged_in = true
-; If you set force_ssl.logged_in, you probably want some URLs to be ssl when logged out:
-;   (import_project uses a login overlay)
-;force_ssl.pattern = ^/auth|^/[a-z0-9-]+/import_project/
 ; And to permit some URLs to be accessed over http anyway:
 ;    /_test_vars is used when running `paster shell`
 ;no_redirect.pattern = ^/nf/\d+/_(ew|static)_/|^/rest/|^/nf/tool_icon_css|^/auth/refresh_repo|^/_test_vars
